--- a/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
@@ -8,8 +8,12 @@
         </p>
     }
 }
-<p>
-    @Ajax.ActionLink("ADD", "Create", "InterChange", new { id = Model.Id },
+@{
+    if (Model.IsAddInterchange)
+    {
+
+        <p>
+            @Ajax.ActionLink("ADD", "Create", "InterChange", new { id = Model.Id },
                    new AjaxOptions
                    {
                        UpdateTargetId = "AddInterchange",
@@ -23,7 +27,9 @@
                        data_toggle = "modal",
                        data_target = "#AddInterchange"
                    })
-</p>
+        </p>
+    }
+}
 
 <table id="interchanges" class="table table-striped table-hover table-bordered">
     <thead class="thead-blue">
@@ -51,8 +57,11 @@
                     <td>@item.StartDate.ToShortDateString()</td>
                     <td>@item.StopDate.ToShortDateString()</td>
                     <td>
-                        <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;"></i>
-                        @Ajax.ActionLink("Edit", "Edit", "InterChange",
+                        @{
+                            if (Model.IsEditInterchange)
+                            {
+                                <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;"></i>
+                                @Ajax.ActionLink("Edit", "Edit", "InterChange",
                            new { Id = item.Id },
                    new AjaxOptions
                    {
@@ -67,20 +76,27 @@
                        data_toggle = "modal",
                        data_target = "#AddInterchange"
                    })
+                            }
+                        }
                     </td>
                     <td>
+                        @{
+                            if (Model.IsDeleteInterchange)
+                            {
                         <i class="fa fa-trash" style="color: red; font-size: 16px;"></i>
                         <button type="button" style="margin: -2px;" data-id="@item.Id"
                                 id="deleteInterchange" class="btn-link" data-toggle="modal"
                                 data-target="#confirmdeleteInterchange">
                             Delete
                         </button>
+                            }
+                        }
                     </td>
 
                 </tr>
             </tbody>
-        }
-    }
+                                }
+                            }
 </table>
 
 @*=========== MODAL =============*@
@@ -101,7 +117,7 @@
             </div>
             <div class="modal-footer">
                 @using (Html.BeginForm("Delete", "InterChange", FormMethod.Post))
-                    {
+                {
                     @Html.AntiForgeryToken()
                     @Html.Hidden("terminalId", ViewData["terminalId"]?.ToString())
                     <input type="hidden" id="id" name="id">
@@ -110,7 +126,7 @@
                         <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
                         <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
                     </div>
-                    }
+                }
             </div>
         </div>
     </div>
